--- a/popup.html
+++ b/popup.html
@@ -8,8 +8,10 @@
     </style>
   </head>
   <body>
-    <button id="fetchBtn">Fetch!</button>
+    <input id="numOfPagesTxt" type="number" name="#" maxlength="4" size="4" pattern="[0-9]+" placeholder="# of pages">
+    <button id="fetchBtn" disabled="true">Fetch!</button>
     <script src="popup.js"></script>
   </body>
+  <script src="popup.js"></script>
 </html>
 
