finalized options for BFS and DFS, and added a few touches to make it closer to version 1.

--- a/options.html
+++ b/options.html
@@ -11,8 +11,10 @@
     </style>
   </head>
   <body>
-    <label id="labelId" for="buttonDiv"></label>
-    <div id="buttonDiv">
+    <div id="traversal" >
+      <p>Traversal:</p>
+      <input id="BFSRad" type="radio" name="traversal" value="BFS" checked/> breadth-first search <br>
+      <input id="DFSRad" type="radio" name="traversal" value="DFS"/> deapth-first search <br>
     </div>
   </body>
   <script src="options.js"></script>
